// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact form errors render 1`] = `
<p>
  ERROR: Missing contact details to render
</p>
`;

exports[`Contact form for home page renders 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-1"
  />
  <div
    className="col-sm-5"
  >
    <p>
      Form
    </p>
  </div>
  <div
    className="col-sm-5"
  >
    <p>
      <span
        className="glyphicon glyphicon-home"
      />
       
      Shady Meadows B&B
    </p>
    <p>
      <span />
       
      The Old Farmhouse, Shady Street, Newfordburyshire, NE1 410S
    </p>
    <p>
      <span
        className="glyphicon glyphicon-earphone"
      />
       
      0123456789
    </p>
    <p>
      <span
        className="glyphicon glyphicon-envelope"
      />
       
      fake@fakeemail.com
    </p>
  </div>
  <div
    className="col-sm-1"
  />
</div>
`;

exports[`Home page renders 1`] = `
<div>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12 text-center"
      >
        <HotelLogo
          logoDetails={
            Object {
              "url": "https://www.mwtestconsultancy.co.uk/img/rbp-logo.png",
            }
          }
        />
      </div>
    </div>
    <div
      className="row hotel-description"
    >
      <div
        className="col-sm-1"
      />
      <div
        className="col-sm-10"
      >
        <p>
          Welcome to Shady Meadows, a delightful Bed & Breakfast nestled in the hills on Newfordburyshire. A place so beautiful you will never want to leave. All our rooms have comfortable beds and we provide breakfast from the locally sourced supermarket. It's a delightful place.
        </p>
      </div>
      <div
        className="col-sm-1"
      />
    </div>
    <div
      key="1"
    >
      <RoomInfo
        room={
          Object {
            "accessible": false,
            "beds": 2,
            "details": "Wifi, TV, Mini-bar",
            "roomNumber": 101,
            "roomid": 1,
            "type": "Twin",
          }
        }
      />
    </div>
    <div
      key="2"
    >
      <RoomInfo
        room={
          Object {
            "accessible": true,
            "beds": 1,
            "details": "Walk in shower",
            "roomNumber": 102,
            "roomid": 2,
            "type": "Single",
          }
        }
      />
    </div>
    <div
      className="row"
    >
      <HotelContact
        contact={
          Object {
            "address": "The Old Farmhouse, Shady Street, Newfordburyshire, NE1 410S",
            "email": "fake@fakeemail.com",
            "name": "Shady Meadows B&B",
            "phone": "0123456789",
          }
        }
      />
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      />
      <HotelMap
        mapDetails={
          Object {
            "hotelName": "Shady meadows B&B",
            "latitude": 52.6351204,
            "longitude": 1.2733774,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Logo for home page errors render 1`] = `
<p>
  ERROR: Url link not provided
</p>
`;

exports[`Logo for home page renders 1`] = `
<img
  alt="Hotel logo"
  className="hotel-logo"
  src="https://www.mwtestconsultancy.co.uk/img/rbp-logo.png"
/>
`;

exports[`Map for home page renders 1`] = `
<div
  className="map"
>
  <Map
    animate={true}
    animateMaxScreens={5}
    defaultCenter={
      Array [
        52.6351204,
        1.2733774,
      ]
    }
    defaultZoom={17}
    height={600}
    limitBounds="center"
    maxZoom={18}
    metaWheelZoom={false}
    metaWheelZoomWarning="Use META+wheel to zoom!"
    minZoom={1}
    mouseEvents={true}
    provider={[Function]}
    touchEvents={true}
    twoFingerDrag={false}
    twoFingerDragWarning="Use two fingers to move the map"
    warningZIndex={100}
    width={1024}
    zoomSnap={true}
  >
    <Marker
      anchor={
        Array [
          52.6351204,
          1.2733774,
        ]
      }
      key="marker_Shady Meadows"
      payload="Shady Meadows"
    />
  </Map>
</div>
`;

exports[`Map for home page renders error 1`] = `
<div
  className="map"
>
  <p>
    ERROR: Invalid or details missing for map to render
  </p>
</div>
`;

exports[`Room info for home page renders 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-12"
  >
    <p>
      Twin
    </p>
    <p>
      2
    </p>
    <p />
    <p>
      Wifi, TV, Mini-bar
    </p>
  </div>
</div>
`;
